--- a/Store 01/Goodyear.html
+++ b/Store 01/Goodyear.html
@@ -57,7 +57,7 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 01</h1>
-    <p>Welcome to the Goodyear Training page.</p>
+    <p>Follow the instructions below to create a Goodyear account and access required training.</p>
 
     <div class="cred-box" onclick="copyToClipboard('901680')">
       Nonsig: 901680<br>
