--- a/Store 01/Conti.html
+++ b/Store 01/Conti.html
@@ -54,7 +54,7 @@
 <section id="role">
   <div class="container">
     <h1>Continental Training - Store 01</h1>
-    <p>Welcome to the Continental Training page.</p>
+    <p>Follow the instructions below to create a Continental account and access required training.</p>
 
     <div class="grid-container">
       <div class="cred-box" onclick="copyToClipboard('Jensen Tire & Auto #1')">
