--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -25,7 +25,7 @@
 <section id="role">    
  <div class="container">
     <h1>Manager Training - Store 01</h1>
-    <p>Welcome to your custom training page.</p>
+    <p>Select the appropriate training below.</p>
 
 <div class="role-grid">
   <a class="button" href="Conti.html">Continental Training
