--- a/Store 01/spiff.html
+++ b/Store 01/spiff.html
@@ -26,7 +26,7 @@
 <section id="role">
   <div class="container">
     <h1>Spiffs - Store 01</h1>
-    <p>Welcome to the Spiff reporting page.</p>
+    <p>Choose your reward site below to create an account.</p>
   
   <div class="training-buttons">    
     <a class="button" href="https://www.Gyrewardsplus.com" target="_blank">Goodyear Rewards</a>
