--- a/Store 01/tech.html
+++ b/Store 01/tech.html
@@ -26,7 +26,7 @@
 <section id="role">    
  <div class="container">
     <h1>Technician Training - Store 01</h1>
-    <p>Welcome to your custom training page.</p>
+    <p>Choose and complete the trainings below.</p>
 
   <div class="role-buttons">    
     <a class="button" href="https://go.team1bg.com" target="_blank">BG Training</a>
