--- a/Store 01/BG.html
+++ b/Store 01/BG.html
@@ -60,7 +60,7 @@
     <p>Contact your BG rep to get enrolled to access the required training.</p>
 
   <div class="training-buttons">    
-    <a class="button" href="https://www.thegoodyearlearningcenter.com/" target="_blank">Launch Training</a>
+    <a class="button" href="https://go.team1bg.com" target="_blank">Launch BG Training</a>
   </div>
       
     <p class="instructions">
