--- a/Store 01/Isolved.html
+++ b/Store 01/Isolved.html
@@ -57,15 +57,15 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 01</h1>
-    <p>Reference the </p>
+    <p>Follow the instructions below to access your ISolved time and attendance portal.</p>
 
   <div class="training-buttons">    
-    <a class="button" href="https://go.team1bg.com" target="_blank">Launch BG Training</a>
+    <a class="button" href="https://identity.myisolved.com/Account/Login" target="_blank">Isolved portal</a>
   </div>
       
     <p class="instructions">
       <div class="training-buttons">    
-        <a class="button" href="../Goodyear.pdf" target="_blank">Instruction Guide</a>
+        <a class="button" href="../Isolved.pdf" target="_blank">Instruction Guide</a>
       </div>
     </p>
 
