--- a/Store 01/manager.html
+++ b/Store 01/manager.html
@@ -36,9 +36,9 @@
   </a>
   <a class="button" href="TodaysClass.html">Todays Class
   </a>
-  <a class="button" href="https://go.team1bg.com" target="_blank">BG Training
+  <a class="button" href="BG.html">BG Training
   </a>
-  <a class="button" href="NAPA.html">NAPA Training
+  <a class="button" href="Isolved.html">ISolved Resources
   </a>
   <a class="button" href="https://www.youtube.com/watch?v=dN11zcwkbxA&list=PLZjmO5pvmh7TNPAngksyF8c25jk7x-wiw" target="_blank">Tireworks Resources
   </a>
