--- a/Store 02/BG.html
+++ b/Store 02/BG.html
@@ -57,7 +57,7 @@
 <section id="role">
   <div class="container">
     <h1>Goodyear Training - Store 02</h1>
-    <p>Contact your BG rep to get enrolled to access the required training.</p>
+    <p>Contact your Manager to gain access to the required training.</p>
 
   <div class="training-buttons">    
     <a class="button" href="https://go.team1bg.com" target="_blank">Launch BG Training</a>
