--- a/Store 02/manager.html
+++ b/Store 02/manager.html
@@ -17,9 +17,6 @@
 
 <nav id="nav-menu">
   <a href="../index.html">Main Dashboard</a>
-  <a href="../Store%2002/select-role.html">Role selection</a>
-  <a href="../Store%2002/manager.html">Manager Courses</a>
-  <a href="../Store%2002/tech.html">Technician Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com" target="_blank">Retail Site</a>
@@ -39,9 +36,9 @@
   </a>
   <a class="button" href="TodaysClass.html">Todays Class
   </a>
-  <a class="button" href="https://go.team1bg.com" target="_blank">BG Training
+  <a class="button" href="BG.html">BG Training
   </a>
-  <a class="button" href="NAPA.html">NAPA Training
+  <a class="button" href="Isolved.html">ISolved Resources
   </a>
   <a class="button" href="https://www.youtube.com/watch?v=dN11zcwkbxA&list=PLZjmO5pvmh7TNPAngksyF8c25jk7x-wiw" target="_blank">Tireworks Resources
   </a>
