--- a/Store 02/tech.html
+++ b/Store 02/tech.html
@@ -18,8 +18,6 @@
 
 <nav id="nav-menu">
   <a href="../index.html">Main Dashboard</a>
-  <a href="../Store%2002/select-role.html">Role selection</a>
-  <a href="../Store%2002/manager.html">Manager Courses</a>
   <a href="../Store%2002/tech.html">Technician Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
@@ -32,10 +30,10 @@
     <p>Welcome to your custom training page.</p>
 
   <div class="role-buttons">    
-    <a class="button" href="https://go.team1bg.com" target="_blank">BG Training</a>
+    <a class="button" href="BG.html">BG Training</a>
     <a class="button" href="Hunter.html">Hunter Training</a>
     <a class="button" href="TodaysClass.html">Todays Class</a>
-    <a class="button" href="NAPA.html">NAPA Training</a>
+    <a class="button" href="Isolved.html">ISolved Resources</a>
   </div>
 
     <footer>
