--- a/Store 01/Isolved.html
+++ b/Store 01/Isolved.html
@@ -56,7 +56,7 @@
     
 <section id="role">
   <div class="container">
-    <h1>Goodyear Training - Store 01</h1>
+    <h1>ISolved Resources - Store 01</h1>
     <p>Follow the instructions below to access your ISolved time and attendance portal.</p>
 
   <div class="training-buttons">    
