--- a/Store 14/Isolved.html
+++ b/Store 14/Isolved.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>ISolved Resources | Store 01</title>
+    <title>ISolved Resources | Store 14</title>
     <link rel="stylesheet" href="../shared-style.css">
     <style>
         .cred-box {
@@ -40,7 +40,7 @@
 <body>
 
 <header>
-     <a href="../Store%2001/manager.html">
+     <a href="../Store%2014/manager.html">
       <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
     </a>
     <div id="hamburger" onclick="toggleMenu()">☰</div>
@@ -48,7 +48,7 @@
 
 <nav id="nav-menu">
   <a href="../index.html">Main Dashboard</a>
-  <a href="../Store%2001/manager.html">Manager Courses</a>
+  <a href="../Store%2014/manager.html">Manager Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com/" target="_blank">Retail Site</a>
@@ -56,7 +56,7 @@
     
 <section id="role">
   <div class="container">
-    <h1>Goodyear Training - Store 01</h1>
+    <h1>ISolved Resources - Store 14</h1>
     <p>Follow the instructions below to access your ISolved time and attendance portal.</p>
 
   <div class="training-buttons">    
