--- a/Store 18/Goodyear.html
+++ b/Store 18/Goodyear.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>BG Training | Store 17</title>
+    <title>Goodyear Training | Store 18</title>
     <link rel="stylesheet" href="../shared-style.css">
     <style>
         .cred-box {
@@ -40,7 +40,7 @@
 <body>
 
 <header>
-     <a href="../Store%2017/manager.html">
+     <a href="../Store%2018/manager.html">
       <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
     </a>
     <div id="hamburger" onclick="toggleMenu()">☰</div>
@@ -48,7 +48,7 @@
 
 <nav id="nav-menu">
   <a href="../index.html">Main Dashboard</a>
-  <a href="../Store%2017/manager.html">Manager Courses</a>
+  <a href="../Store%2018/manager.html">Manager Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com/" target="_blank">Retail Site</a>
@@ -56,11 +56,16 @@
     
 <section id="role">
   <div class="container">
-    <h1>BG Training - Store 17</h1>
-    <p>Contact your Manager to gain access to the required training.</p>
+    <h1>Goodyear Training - Store 18</h1>
+    <p>Follow the instructions below to create a Goodyear account and access required training.</p>
 
+    <div class="cred-box" onclick="copyToClipboard('187472')">
+      Nonsig: 187472<br>
+      <small>(Tap to copy)</small>
+    </div>
+  
   <div class="training-buttons">    
-    <a class="button" href="https://go.team1bg.com" target="_blank">Launch BG Training</a>
+    <a class="button" href="https://www.thegoodyearlearningcenter.com/" target="_blank">Launch Training</a>
   </div>
       
     <p class="instructions">
@@ -153,6 +158,14 @@ $(function() {
 function toggleMenu() {
   const menu = document.getElementById("nav-menu");
   menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+}
+
+function copyToClipboard(text) {
+  navigator.clipboard.writeText(text).then(function() {
+    alert('Copied: ' + text);
+  }, function(err) {
+    alert('Failed to copy: ' + err);
+  });
 }
 </script>
 
