--- a/Store 21/Isolved.html
+++ b/Store 21/Isolved.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>BG Training | Store 17</title>
+    <title>ISolved Resources | Store 21</title>
     <link rel="stylesheet" href="../shared-style.css">
     <style>
         .cred-box {
@@ -40,7 +40,7 @@
 <body>
 
 <header>
-     <a href="../Store%2017/manager.html">
+     <a href="../Store%2021/manager.html">
       <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
     </a>
     <div id="hamburger" onclick="toggleMenu()">☰</div>
@@ -48,7 +48,7 @@
 
 <nav id="nav-menu">
   <a href="../index.html">Main Dashboard</a>
-  <a href="../Store%2017/manager.html">Manager Courses</a>
+  <a href="../Store%2021/manager.html">Manager Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com/" target="_blank">Retail Site</a>
@@ -56,16 +56,16 @@
     
 <section id="role">
   <div class="container">
-    <h1>BG Training - Store 17</h1>
-    <p>Contact your Manager to gain access to the required training.</p>
+    <h1>ISolved Training - Store 21</h1>
+    <p>Follow the instructions below to access your ISolved time and attendance portal.</p>
 
   <div class="training-buttons">    
-    <a class="button" href="https://go.team1bg.com" target="_blank">Launch BG Training</a>
+    <a class="button" href="https://identity.myisolved.com/Account/Login" target="_blank">Isolved portal</a>
   </div>
       
     <p class="instructions">
       <div class="training-buttons">    
-        <a class="button" href="../Goodyear.pdf" target="_blank">Instruction Guide</a>
+        <a class="button" href="../Isolved.pdf" target="_blank">Instruction Guide</a>
       </div>
     </p>
 
