--- a/Store 22/BG.html
+++ b/Store 22/BG.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>BG Training | Store 17</title>
+    <title>BG Training | Store 22</title>
     <link rel="stylesheet" href="../shared-style.css">
     <style>
         .cred-box {
@@ -40,7 +40,7 @@
 <body>
 
 <header>
-     <a href="../Store%2017/manager.html">
+     <a href="../Store%2022/manager.html">
       <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
     </a>
     <div id="hamburger" onclick="toggleMenu()">☰</div>
@@ -48,7 +48,7 @@
 
 <nav id="nav-menu">
   <a href="../index.html">Main Dashboard</a>
-  <a href="../Store%2017/manager.html">Manager Courses</a>
+  <a href="../Store%2022/manager.html">Manager Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com/" target="_blank">Retail Site</a>
@@ -56,8 +56,8 @@
     
 <section id="role">
   <div class="container">
-    <h1>BG Training - Store 17</h1>
-    <p>Contact your Manager to gain access to the required training.</p>
+    <h1>BG Training - Store 22</h1>
+    <p>Contact your BG rep to get enrolled to access the required training.</p>
 
   <div class="training-buttons">    
     <a class="button" href="https://go.team1bg.com" target="_blank">Launch BG Training</a>
@@ -139,7 +139,6 @@ $(function() {
     background: 'rgb(249, 117, 38)',
     fontSize: '12px',
     chatId: 1,
-    show: false
   });
 
   $('.open-zammad-chat').on('click', function(e) {
@@ -150,10 +149,35 @@ $(function() {
 </script>
 
 <script>
-function toggleMenu() {
-  const menu = document.getElementById("nav-menu");
-  menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
-}
+  function toggleMenu() {
+    const menu = document.getElementById("nav-menu");
+    menu.classList.toggle("open");
+  }
+
+function closeMenu() {
+    const menu = document.getElementById("nav-menu");
+    menu.classList.remove("open");
+  }
+
+  document.addEventListener("click", function (event) {
+    const menu = document.getElementById("nav-menu");
+    const hamburger = document.getElementById("hamburger");
+
+    if (
+      menu.classList.contains("open") &&
+      !menu.contains(event.target) &&
+      !hamburger.contains(event.target)
+    ) {
+      closeMenu();
+    }
+  });
+
+  document.addEventListener("keydown", function (event) {
+    if (event.key === "Escape") {
+      closeMenu();
+    }
+  });
+
 </script>
 
 </body>
