--- a/Store 19/Conti.html
+++ b/Store 19/Conti.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Continental Training | Store 18</title>
+    <title>Continental Training | Store 19</title>
     <link rel="stylesheet" href="../shared-style.css">
     <style>
         .cred-box {
@@ -37,7 +37,7 @@
 <body>
 
 <header>
-  <a href="../Store%2018/manager.html">
+  <a href="../Store%2019/manager.html">
     <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
   </a>
   <div id="hamburger" onclick="toggleMenu()">☰</div>
@@ -45,7 +45,7 @@
 
 <nav id="nav-menu">
   <a href="../index.html">Main Dashboard</a>
-  <a href="../Store%2018/manager.html">Manager Courses</a>
+  <a href="../Store%2019/manager.html">Manager Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com" target="_blank">Retail Site</a>
@@ -53,21 +53,21 @@
     
 <section id="role">
   <div class="container">
-    <h1>Continental Training - Store 18</h1>
+    <h1>Continental Training - Store 19</h1>
     <p>Follow the instructions below to create a Continental account and access required training.</p>
 
     <div class="grid-container">
-      <div class="cred-box" onclick="copyToClipboard('Jensen Tire & Auto #18')">
-        Store Name: Jensen Tire & Auto #18<br><small>(Tap to copy)</small>
+      <div class="cred-box" onclick="copyToClipboard('Jensen Tire & Auto #19')">
+        Store Name: Jensen Tire & Auto #19<br><small>(Tap to copy)</small>
       </div>
-      <div class="cred-box" onclick="copyToClipboard('8288753')">
-        Account Number: 8288753<br><small>(Tap to copy)</small>
+      <div class="cred-box" onclick="copyToClipboard('8288754')">
+        Account Number: 8288754<br><small>(Tap to copy)</small>
       </div>
-      <div class="cred-box" onclick="copyToClipboard('402-493-7990')">
-        Store Phone Number: <a href="tel:4024937990">402-493-7990</a><br><small>(Tap to copy)</small>
+      <div class="cred-box" onclick="copyToClipboard('402-891-4650')">
+        Store Phone Number: <a href="tel:4028914650">402-891-4650</a><br><small>(Tap to copy)</small>
       </div>
-      <div class="cred-box" onclick="copyToClipboard('5115 N 108th St Omaha NE 68164')">
-        Store Address: 5115 N 108th St Omaha NE 68164<br><small>(Tap to copy)</small>
+      <div class="cred-box" onclick="copyToClipboard('16755 Monroe St Omaha NE 68135')">
+        Store Address: 16755 Monroe St Omaha NE 68135<br><small>(Tap to copy)</small>
       </div>
     </div>
   
