--- a/Store 02/Conti.html
+++ b/Store 02/Conti.html
@@ -54,7 +54,7 @@
 <section id="role">
   <div class="container">
     <h1>Continental Training - Store 02</h1>
-    <p>Welcome to the Continental Training page.</p>
+    <p>Follow the instructions below to access your Continental Training portal.</p>
 
     <div class="grid-container">
       <div class="cred-box" onclick="copyToClipboard('Jensen Tire & Auto #2')">
