--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@ document.getElementById("feedback-form").addEventListener("submit", async functi
   }
 });
 
+</script>
+
 <!-- Firebase (modular CDN) -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
