--- a/Store 02/Isolved.html
+++ b/Store 02/Isolved.html
@@ -193,7 +193,7 @@ function copyToClipboard(text) {
 
 <script>
   // 1) Paste your Power Automate HTTP POST URL here:
-  const FLOW_URL = 'https://<your-flow-endpoint>';
+  const FLOW_URL = 'https://default4e006550b51242c29ec2b301c0fa6a.51.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/b2ed9557d4644a7ab9f70211c4a3bf33/triggers/manual/paths/invoke/?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=QSoxbZBeYymcAn1YdINQpX5pMMJ6ophzTiSdIzIGmTE';
 
   const dialogEl = document.getElementById('requestDialog');
   const btnEl = document.getElementById('requestBtn');
