--- a/Store 02/Isolved.html
+++ b/Store 02/Isolved.html
@@ -192,28 +192,28 @@ function copyToClipboard(text) {
 </script>
     
 <script>
-function request() {
-  document.getElementById('').style.display = 'block';
+function openRequest() {
+  document.getElementById('request').style.display = 'block';
 }
 
-function closeFeedbackPopup() {
-  document.getElementById('feedbackPopup').style.display = 'none';
+function closeRequest() {
+  document.getElementById('request').style.display = 'none';
 }
 
-document.getElementById("feedback-form").addEventListener("submit", async function (e) {
+document.getElementById("request-form").addEventListener("submit", async function (e) {
   e.preventDefault();
-  const feedback = document.getElementById("feedback").value;
+  const feedback = document.getElementById("request").value;
 
   const response = await fetch("https://default4e006550b51242c29ec2b301c0fa6a.51.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/b2ed9557d4644a7ab9f70211c4a3bf33/triggers/manual/paths/invoke/?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=QSoxbZBeYymcAn1YdINQpX5pMMJ6ophzTiSdIzIGmTE", {
     method: "POST",
     headers: {
       "Content-Type": "application/json"
     },
-    body: JSON.stringify({ feedback })
+    body: JSON.stringify({ request })
   });
 
   if (response.ok) {
-    document.getElementById("feedback").value = "";
+    document.getElementById("request").value = "";
     document.getElementById("thank-you").style.display = "block";
     setTimeout(() => {
       document.getElementById("thank-you").style.display = "none";
