--- a/Store 02/Isolved.html
+++ b/Store 02/Isolved.html
@@ -70,7 +70,7 @@
     </p>
 
       <div class="training-buttons">    
-        <a class="button" href="#" onclick="openRequest()">Request Manager Instructions</a>
+        <a class="button" onclick="openRequest()">Request Manager Instructions</a>
       </div>
 
     <footer style="margin-top: 40px;">
