--- a/Store 02/TodaysClass.html
+++ b/Store 02/TodaysClass.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Rewards & Spiffs | Store 02</title>
+    <title>Todays Class | Store 02</title>
     <link rel="stylesheet" href="../shared-style.css">
 </head>
 <body>
@@ -25,12 +25,12 @@
     
 <section id="role">
   <div class="container">
-    <h1>Spiffs - Store 02</h1>
-    <p>Welcome to the Spiff reporting page.</p>
+    <h1>Todays Class - Store 02</h1>
+    <p>Please click the appropriate link below to download the app.</p>
   
   <div class="training-buttons">    
-    <a class="button" href="https://www.Gyrewardsplus.com" target="_blank">Goodyear Rewards</a>
-    <a class="button" href="https://www.ContinentalRPM.com" target="_blank">Continental Rewards</a>
+    <a class="button" href="https://play.google.com/store/apps/details?id=com.todaysclass.app" target="_blank">Google Play Store</a>
+    <a class="button" href="https://apps.apple.com/us/app/todays-class/id1458558480" target="_blank">Apple App Store</a>
   </div>
 
     <footer style="margin-top: 40px;">
