--- a/Store 02/BG.html
+++ b/Store 02/BG.html
@@ -57,7 +57,7 @@
 <section id="role">
   <div class="container">
     <h1>BG Training - Store 02</h1>
-    <p>Contact your Store Manager or DM to gain access to the required training.</p>
+    <p>Contact your Manager to gain access to the required training.</p>
 
   <div class="training-buttons">    
     <a class="button" href="https://go.team1bg.com" target="_blank">Launch BG Training</a>
@@ -65,9 +65,16 @@
       
     <p class="instructions">
       <div class="training-buttons">    
-        <a class="button" href="../Goodyear.pdf" target="_blank">Instruction Guide</a>
+        <a class="button" href="https://www.youtube.com/watch?v=N_ysr1ppa58" target="_blank">Point-of-Sale Video</a>
       </div>
     </p>
+
+    <p class="instructions">
+      <div class="training-buttons">    
+        <a class="button" href="https://www.youtube.com/watch?v=fbVVn15dOJs" target="_blank">Product Knowledge Video</a>
+      </div>
+    </p>
+
 
     <footer style="margin-top: 40px;">
         Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
