--- a/Store 01/Isolved.html
+++ b/Store 01/Isolved.html
@@ -69,6 +69,10 @@
       </div>
     </p>
 
+      <div class="training-buttons">    
+        <a class="button" onclick="openRequest()">Request Manager Instructions</a>
+      </div>
+
     <footer style="margin-top: 40px;">
         Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
     </footer>
@@ -92,6 +96,27 @@
     <p id="thank-you" style="display: none; color: black; margin-top: 20px;">Thank you for your feedback!</p>
   </div>
 </div>
+
+<div id="requestPopup" class="feedback-popup" style="display: none;">
+  <div class="feedback-content">
+    <h3 id="request-title">Request Manager Instructions</h3>
+    <form id="request-form">
+      <textarea
+        id="request"
+        name="request"
+        placeholder="Please type your name and Store #"
+        required
+      ></textarea>
+      <br />
+      <button type="submit" class="button">Submit</button>
+      <button type="button" class="button" onclick="closeRequest()">Cancel</button>
+    </form>
+    <p id="thank-you-request" style="display: none; color: black; margin-top: 20px;">
+      Thank you! Your request was sent.
+    </p>
+  </div>
+</div>
+
 
 <script>
 function openFeedbackPopup() {
@@ -139,7 +164,6 @@ $(function() {
     background: 'rgb(249, 117, 38)',
     fontSize: '12px',
     chatId: 1,
-    show: false
   });
 
   $('.open-zammad-chat').on('click', function(e) {
@@ -150,11 +174,87 @@ $(function() {
 </script>
 
 <script>
-function toggleMenu() {
-  const menu = document.getElementById("nav-menu");
-  menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+  function toggleMenu() {
+    const menu = document.getElementById("nav-menu");
+    menu.classList.toggle("open");
+  }
+
+function closeMenu() {
+    const menu = document.getElementById("nav-menu");
+    menu.classList.remove("open");
+  }
+
+  document.addEventListener("click", function (event) {
+    const menu = document.getElementById("nav-menu");
+    const hamburger = document.getElementById("hamburger");
+
+    if (
+      menu.classList.contains("open") &&
+      !menu.contains(event.target) &&
+      !hamburger.contains(event.target)
+    ) {
+      closeMenu();
+    }
+  });
+
+  document.addEventListener("keydown", function (event) {
+    if (event.key === "Escape") {
+      closeMenu();
+    }
+  });
+    
+function copyToClipboard(text) {
+  navigator.clipboard.writeText(text).then(function() {
+    alert('Copied: ' + text);
+  }, function(err) {
+    alert('Failed to copy: ' + err);
+  });
 }
 </script>
+    
+<script>
+  function openRequest() {
+    document.getElementById('requestPopup').style.display = 'block';
+  }
+
+  function closeRequest() {
+    document.getElementById('requestPopup').style.display = 'none';
+  }
+
+  // Attach once the DOM for #request-form exists (your scripts are at the bottom, so this is fine)
+  document.getElementById("request-form").addEventListener("submit", async function (e) {
+    e.preventDefault();
+
+    const request = document.getElementById("request").value.trim();
+    if (!request) return;
+
+    try {
+      const response = await fetch("https://default4e006550b51242c29ec2b301c0fa6a.51.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/b2ed9557d4644a7ab9f70211c4a3bf33/triggers/manual/paths/invoke/?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=QSoxbZBeYymcAn1YdINQpX5pMMJ6ophzTiSdIzIGmTE", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        // IMPORTANT: send the value under the property name your Flow expects.
+        // If your Flow is expecting "request", keep it as is. If it expects "feedback",
+        // change the key to { feedback: request }.
+        body: JSON.stringify({ request })
+      });
+
+      if (response.ok) {
+        document.getElementById("request").value = "";
+        document.getElementById("thank-you-request").style.display = "block";
+        setTimeout(() => {
+          document.getElementById("thank-you-request").style.display = "none";
+          closeRequest();
+        }, 2000);
+      } else {
+        alert("Submission failed. Please try again.");
+      }
+    } catch (err) {
+      alert("Network error. Please try again.");
+      console.error(err);
+    }
+  });
+</script>
+
 
 </body>
 </html>
