--- a/Store 01/BG.html
+++ b/Store 01/BG.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>BG Training | Store 01</title>
+    <title>BG Training | Store 02</title>
     <link rel="stylesheet" href="../shared-style.css">
     <style>
         .cred-box {
@@ -40,7 +40,7 @@
 <body>
 
 <header>
-     <a href="../Store%2001/manager.html">
+     <a href="../Store%2002/manager.html">
       <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
     </a>
     <div id="hamburger" onclick="toggleMenu()">☰</div>
@@ -48,7 +48,7 @@
 
 <nav id="nav-menu">
   <a href="../index.html">Main Dashboard</a>
-  <a href="../Store%2001/manager.html">Manager Courses</a>
+  <a href="../Store%2002/manager.html">Manager Courses</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com/" target="_blank">Retail Site</a>
@@ -56,8 +56,8 @@
     
 <section id="role">
   <div class="container">
-    <h1>BG Training - Store 01</h1>
-    <p>Contact your BG rep to get enrolled to access the required training.</p>
+    <h1>BG Training - Store 02</h1>
+    <p>Contact your Manager to gain access to the required training.</p>
 
   <div class="training-buttons">    
     <a class="button" href="https://go.team1bg.com" target="_blank">Launch BG Training</a>
@@ -65,9 +65,16 @@
       
     <p class="instructions">
       <div class="training-buttons">    
-        <a class="button" href="../Goodyear.pdf" target="_blank">Instruction Guide</a>
+        <a class="button" href="https://www.youtube.com/watch?v=N_ysr1ppa58" target="_blank">Point-of-Sale Video</a>
       </div>
     </p>
+
+    <p class="instructions">
+      <div class="training-buttons">    
+        <a class="button" href="https://www.youtube.com/watch?v=fbVVn15dOJs" target="_blank">Product Knowledge Video</a>
+      </div>
+    </p>
+
 
     <footer style="margin-top: 40px;">
         Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
