--- a/Store 01/Hunter.html
+++ b/Store 01/Hunter.html
@@ -57,7 +57,7 @@
 <section id="role">
   <div class="container">
     <h1>Hunter Training - Store 01</h1>
-    <p>Log in with the Credentials provided in the initial email.</p>
+    <p>Use the credentials provided in the initial email to log in.</p>
 
   <div class="training-buttons">    
     <a class="button" href="https://university.hunter.com/learn" target="_blank">Launch Hunter Training</a>
