--- a/Store 09/BG.html
+++ b/Store 09/BG.html
@@ -57,7 +57,7 @@
 <section id="role">
   <div class="container">
     <h1>BG Training - Store 09</h1>
-    <p>Contact your Manager to gain access to the required training.</p>
+    <p>Use the credentials provided in the initial email to log in.</p>
 
   <div class="training-buttons">    
     <a class="button" href="https://go.team1bg.com" target="_blank">Launch BG Training</a>
