--- a/Store 24/BG.html
+++ b/Store 24/BG.html
@@ -65,9 +65,16 @@
       
     <p class="instructions">
       <div class="training-buttons">    
-        <a class="button" href="../Goodyear.pdf" target="_blank">Instruction Guide</a>
+        <a class="button" href="https://www.youtube.com/watch?v=N_ysr1ppa58" target="_blank">Point-of-Sale Video</a>
       </div>
     </p>
+
+    <p class="instructions">
+      <div class="training-buttons">    
+        <a class="button" href="https://www.youtube.com/watch?v=fbVVn15dOJs" target="_blank">Product Knowledge Video</a>
+      </div>
+    </p>
+
 
     <footer style="margin-top: 40px;">
         Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
