--- a/Store 01/select-role.html
+++ b/Store 01/select-role.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Select Role | Store 01</title>
+    <title>Under construction</title>
     <link rel="stylesheet" href="../shared-style.css">
 </head>
 <body>
@@ -25,17 +25,7 @@
     
 <section id="role">
   <div class="container">
-    <h1>Select Your Role - Store 01</h1>
-    <p>Please choose your position to continue to the appropriate training.</p>
-
-  <div class="role-buttons">    
-    <a class="button" href="manager.html">Manager</a>
-    <a class="button" href="tech.html">Technician</a>
-  </div>
-
-    <footer>
-        Questions? Contact <a href="mailto:support@jensentireandauto.com">Jensen Support</a>
-    </footer>
+    <h5>This site is under construction! <br> <br> <br> We apologize for any inconvenience.</h5>
       
  </div>
 </section>
