--- a/Store 09/Hunter.html
+++ b/Store 09/Hunter.html
@@ -65,7 +65,7 @@
       
     <p class="instructions">
       <div class="training-buttons">    
-        <a class="button" href="#" target="_blank">Instructions</a>
+        <a class="button" href="../Hunterinstruction.html" target="_blank">Instructions</a>
       </div>
     </p>
 
