--- a/Hunterinstruction.html
+++ b/Hunterinstruction.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Under construction</title>
-    <link rel="stylesheet" href="../shared-style.css">
+    <link rel="stylesheet" href="shared-style.css">
 </head>
 <body>
 
 <header>
-  <a href="../index.html">
-      <img src="../logo.jpg" alt="Jensen Tire & Auto Logo">
+  <a href="index.html">
+      <img src="logo.jpg" alt="Jensen Tire & Auto Logo">
   </a>
     <div id="hamburger" onclick="toggleMenu()">☰</div>
 </header>
 
 <nav id="nav-menu">
-  <a href="../index.html">Main Dashboard</a>
+  <a href="index.html">Main Dashboard</a>
   <a href="#" onclick="openFeedbackPopup()">Submit Feedback</a>
   <a href="#" class="nav-link open-zammad-chat">Jensen Support chat</a>
   <a href="https://jensentireandauto.com" target="_blank">Retail Site</a>
