--- a/Store 11/TodaysClass.html
+++ b/Store 11/TodaysClass.html
@@ -26,7 +26,8 @@
 <section id="role">
   <div class="container">
     <h1>Todays Class - Store 11</h1>
-    <p>Use your assigned credentials below to log in.</p>
+    <p>Dowload the app using the appropriate link below <br>
+        <br>Use your assigned credentials below to log in.</p>
 
   <div id="credsWrapper" class="grid-container">
     <div id="todaysClassUserBox" class="cred-box" onclick="copyToClipboard(this.dataset.copy)">
