--- a/Store 04/manager.html
+++ b/Store 04/manager.html
@@ -28,7 +28,7 @@
 <section id="role">    
  <div class="container">
     <h1>Manager Training - Store 04</h1>
-    <p>Welcome to your custom training page.</p>
+    <p>Select your training from the list below.</p>
 
 <div class="role-grid">
   <a class="button" href="Conti.html">Continental Training
@@ -39,9 +39,9 @@
   </a>
   <a class="button" href="TodaysClass.html">Todays Class
   </a>
-  <a class="button" href="https://go.team1bg.com" target="_blank">BG Training
+  <a class="button" href="BG.html">BG Training
   </a>
-  <a class="button" href="NAPA.html">NAPA Training
+  <a class="button" href="Isolved.html">ISolved Resources
   </a>
   <a class="button" href="https://www.youtube.com/watch?v=dN11zcwkbxA&list=PLZjmO5pvmh7TNPAngksyF8c25jk7x-wiw" target="_blank">Tireworks Resources
   </a>
